--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "global": "^4.4.0",
     "draft-js": "^0.11.7",
+    "global": "^4.4.0",
     "install": "^0.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-draft-wysiwyg": "^1.15.0",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "slate": "^0.103.0",
+    "slate-react": "^0.107.1"
   },
   "devDependencies": {
-    "@types/draft-js": "^0.11.18",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/react-draft-wysiwyg": "^1.13.8",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
@@ -34,6 +33,7 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "react-froala-wysiwyg": "^4.2.1"
   }
 }
