--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "draft-js": "^0.11.7",
+    "froala-editor": "^4.2.1",
     "global": "^4.4.0",
     "install": "^0.13.0",
     "react": "^18.3.1",
@@ -31,9 +32,9 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.8",
     "postcss": "^8.4.39",
+    "react-froala-wysiwyg": "^4.2.1",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3",
-    "vite": "^5.3.4",
-    "react-froala-wysiwyg": "^4.2.1"
+    "vite": "^5.3.4"
   }
 }
