--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "draft-js": "^0.11.7",
     "froala-editor": "^4.2.1",
     "global": "^4.4.0",
     "install": "^0.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "slate": "^0.103.0",
     "slate-react": "^0.107.1"
