--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "dotenv": "^16.4.5",
     "draft-js": "^0.11.7",
     "froala-editor": "^4.2.1",
     "global": "^4.4.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-hot-toast": "^2.4.1",
     "slate": "^0.103.0",
     "slate-react": "^0.107.1"
   },
