cloudinary for image storage

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 VITE_BASE_URL='https://eyegovbe-production.up.railway.app/api'
+VITE_CLOUDINARY_API_KEY='885817653263579'
+VITE_CLOUDINARY_API_SECRET='IGH_YJIwDxv_R4hk9KajoMoiI5I'
+VITE_CLOUDINARY_CLOUD_NAME='degfjcic5'
+VITE_CLOUDINARY_UPLOAD_PRESET='ml_default'
